@@ -1,49 +1,38 @@
 [ TODO list and tentative development plan ]
 [ // = done, but not tested/documented     ]
 
-// * GUI: data range mode: with [Shift] (dis)activate with rectangle
-
-// * an easy way to change colors of all datasets, eg. using colorramp 
-
 * user defined functions:
       // - default parameter values can take any expression...
       // - syntax:
       //   --> define Gaussian(a,pos,width): a*exp(-((x-pos)/width)^2)
       //                  ^^^ any name but 'x' allowed here
-      - more sophisticated simplifications of expressions and CSE(!)
       - f(x) = a1*(a2/x)^3*exp(-(((a2/x)-a3)/a4)^2) / x 
          (Maxwell-Boltzmann velocity (flux) distribution
 	  for Wolfgang Christen)
 
-// * (GUI) new Fit->Run dialog (one dialog with max. WSSR evaluations,
-//   max. iterations, continue checkbox, OK/Cancel)
-
-//* "info" can be redirected to file in every case
-//   ("info ... >> file" appends to file, with '>' it truncates file)
-
-* (GUI) peak-tops should be visible also in range-mode
-
-// * (GUI) added peak should be activeted
-
-// * (GUI) access to pop-up menus (plots, output window) from menubar
-
-// * all variables starting with "_" are auto-deleted when not used anymore
-
-* simple-variable domain ~3[2:14]
-
-// * fitting:  maximum lambda as stopping criterium for LM
-
-// * [BUG] "fit; delete %foo; fit+" causes crash
-
 ------------------ next release here 0.7.5
+* history (data / sum / view / all) [IMPORTANT]
+   i don't exactly know how to implement it yet
+
 * (GUI) peak dragging -- sensible scaling of parameter changes 
            (problems with width changing)
  	(bug?) now it matters in which point exactly you catch the peak
 
+* implement command "dump", which also embeds data in script using
+   M=..., x[0]=.., y[0]=.., s[0]=..., a[0]=.., x[1]=..,...
+
+* BUG: "reset" doesn't deletes functions and variables, it should also
+  replot in GUI and reset automatic func/var counter.
+
 * user defined functions:
+      - more sophisticated simplifications of expressions and CSE(!)
       - calculating limits, width, area, etc. for UDF(!)
 
+* settings: default relative domain width
+
 * ?? un-strip background: append proper 'in @n' (not the one used for strip),
+
+* GUI?: when loading many datasets from command line, set view to show all
 
 * (GUI) finish script debugger dialog
 
@@ -69,15 +58,6 @@
 * settings: Nelder-Mead and GA fitting options, 
   a way to "shake" parameters for L-M
   constrained L-M option
-
-* history (data / sum / view / all) [IMPORTANT]
-   i don't exactly know how to implement it yet
-
-* implement command "dump", which also embeds data in script using
-   M=..., x[0]=.., y[0]=.., s[0]=..., a[0]=.., x[1]=..,...
-
-* BUG: "reset" doesn't deletes functions and variables, it should also
-  replot in GUI and reset automatic func/var counter.
 
 * (GUI) redrawing for many datasets (~100) takes noticable time.
   Kind of plot buffering (as a bitmap).
@@ -118,8 +98,7 @@
 	  more extensive and configurable (2/3 buttons, size) mouse hints 
 		   (also for aux. plot, etc)
 	  more exact (or customizable) y coordinate at status bar
-	  [^] (Shift) in status line hints; pressing Shift should update
-	  hints
+	  Shift/Ctrl in status line hints; pressing Shift should update hints
 
 * (GUI) vertical scaling using mouse on main plot near to left edge of the plot 
 
